tests/compile_errors/type/004_undefined_variable.xr
// 004_undefined_variable.xr
// Expected: Compile error - undefined variable
// Error should mention: undefined, not defined, unknown
print(undefinedVar)
